# xjb_play

./: LICENSE  README.md  decoratordemo.ipynb  demo.ipynb  demo.py  dictmerge.ipynb  dir_count.py  holiday.py  imp.ipynb  isweekend.py  logloss.py  mymetric.py  numba-jit.ipynb  run.py  zlog使用手册.html
c++_and_python/: hello
c++_and_python/c++_by_pythonAPI/: demo  demo.cpp  demo2  demo2.cpp  demo3.cpp  mytest.cpp  time
c++andpython/cINpy/: main  main.cpp  main.py  pycall.c  pycall.py  pycallclass.cpp  pycallclass.py
c++andpython/g++/: hello
c++andpython/pyINc/: demo.cpp  demo2  demo2.cpp  mytest.py
cmake/: CMakeLists.txt  main.cpp
cmake/math/: add.cpp
crawler/: githubinfo.py  json-demo.ipynb  requests&urllib.ipynb  requests-demo.ipynb  sgdsm.py  tieba.py  正则表达式.ipynb
foo/: bar.py
gym/: cartpole.py  demo.ipynb  demo.py
hidden-markov-model/: hmm.py  test.ipynb  test.py
numpyL/: DAY0.ipynb
py_torch/: thefirst.py
pythonL/: cookbook.ipynb  demo.py  dictmerge.ipynb  listmerge.ipynb  python_pipe.py  test.py  test.py.lprof
spider/: lagou.py
